--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
+    "node-sass": "^7.0.1",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "sass": "^1.49.0"
   }
 }
